[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-ctk"
authors = [{name = "Mikael Tranbom"}, {email = "mikael@tranbom.io"}]
description = "Simple user interface for yt-dlp"
requires-python = ">=3.9"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video"
]
keywords = [
    "yt-dlp", "youtube downloader", "yt-dlp gui",
    "youtube audio"
]
readme = "README.md"

dynamic = ["version"]

[project.scripts]
yt-dlp-ctk = "yt_dlp_ctk:main.main"

[project.urls]
"Homepage" = "https://gitlab.com/tranbom/yt-dlp-ctk"
"Repository" = "https://gitlab.com/tranbom/yt-dlp-ctk"

[tool.setuptools.dynamic]
version = {attr = "yt_dlp_ctk.__version__"}

[tool.setuptools.packages.find]
include = ["yt_dlp_ctk"]
exclude = ["yt_dlp_ctk.tests*", "tests*"]
